# storage/api-docs/api-docs.json
@@ -10,7 +10,7 @@
     },
     "servers": [
         {
-            "url": "http://nighthub.test/api",
+            "url": "http://crypt-talk.test/api",
             "description": "Dev server"
         },
         {
@@ -301,6 +301,218 @@
                 ]
             }
         },
+        "/auth/profile-update": {
+            "post": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "User profil update",
+                "operationId": "4a6525e8e9aadee174355e6371e78f7b",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "required": [
+                                    "name",
+                                    "about",
+                                    "avatar"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "description": "User name",
+                                        "type": "string",
+                                        "example": "John Doe"
+                                    },
+                                    "about": {
+                                        "description": "About user",
+                                        "type": "string",
+                                        "example": "Software developer from Belgrade"
+                                    },
+                                    "avatar": {
+                                        "description": "User avatar file",
+                                        "type": "string",
+                                        "format": "binary"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "User updated"
+                    },
+                    "500": {
+                        "description": "Server Error"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/user/password-update": {
+            "post": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "User password update",
+                "operationId": "6e8605d5e28946b6e118a8db9a85469d",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "required": [
+                                    "name",
+                                    "about",
+                                    "avatar"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "description": "User name",
+                                        "type": "string",
+                                        "example": "John Doe"
+                                    },
+                                    "about": {
+                                        "description": "About user",
+                                        "type": "string",
+                                        "example": "Software developer from Belgrade"
+                                    },
+                                    "avatar": {
+                                        "description": "User avatar file",
+                                        "type": "string",
+                                        "format": "binary"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Password updated"
+                    },
+                    "500": {
+                        "description": "Server Error"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/message/my-conversations": {
+            "get": {
+                "tags": [
+                    "Message"
+                ],
+                "summary": "Get all conversations for authenticated user",
+                "operationId": "eafadd5f0aaeb9b8c139c2d030505fb4",
+                "responses": {
+                    "200": {
+                        "description": "All user conversations"
+                    },
+                    "500": {
+                        "description": "Server Error"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/message/conversation/{friend_id}": {
+            "get": {
+                "tags": [
+                    "Message"
+                ],
+                "summary": "Get conversation with a friend",
+                "operationId": "5a3c148fe2fe956f2bbbd24d8d722ae6",
+                "parameters": [
+                    {
+                        "name": "friend_id",
+                        "in": "path",
+                        "description": "ID of the friend to fetch conversation with",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "example": 3
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Conversation retrieved successfully"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "500": {
+                        "description": "Server Error"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/message/send": {
+            "post": {
+                "tags": [
+                    "Message"
+                ],
+                "summary": "Send message",
+                "operationId": "eaafca982862ddd629b2fe5ff1e0ee79",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "recipient_id"
+                                ],
+                                "properties": {
+                                    "recipient_id": {
+                                        "type": "integer",
+                                        "default": 3
+                                    },
+                                    "content": {
+                                        "type": "text",
+                                        "default": "lorem ipsum"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Message sent"
+                    },
+                    "500": {
+                        "description": "Server Error"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/user/search": {
             "post": {
                 "tags": [
@@ -526,6 +738,10 @@
         {
             "name": "User",
             "description": "User"
+        },
+        {
+            "name": "Message",
+            "description": "Message"
         }
     ]
 }
